--- a/yt.html
+++ b/yt.html
@@ -31,14 +31,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home </a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item ">
                         <a class="nav-link" href="mindquiz.html">mindquiz</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="simpleRPG.html">simpleRPG</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">yt<span class="sr-only">(current)</span></a>
+                        <a class="nav-link active" href="#">yt<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
                 <form class="form-inline mt-2 mt-md-0">
@@ -59,32 +59,32 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+                    <img class="first-slide" src="img/02.jpg" alt="First slide">
                     <div class="container">
                         <div class="carousel-caption text-left">
-                            <h1>Example headline.</h1>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                            <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+                            <h1>BTS</h1>
+                            <p>the biggest boy band in the world.</p>
+
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+                    <img class="second-slide" src="img/03.jpg" alt="Second slide">
                     <div class="container">
                         <div class="carousel-caption">
-                            <h1>Another example headline.</h1>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                            <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                            <h1>防彈少年團</h1>
+                            <p>由Jin Suga J-hope RM Jimin V Joungkook組成的七人男子團體</p>
+
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+                    <img class="third-slide" src="img/06.jpg" alt="Third slide">
                     <div class="container">
                         <div class="carousel-caption text-right">
-                            <h1>One more for good measure.</h1>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                            <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+                            <h1>Speak Yourself！</h1>
+                            <p>No matter who you are, where you from, your skin color, your gender identity, just speak yourself.</p>
+
                         </div>
                     </div>
                 </div>
@@ -116,6 +116,7 @@
 
             <!--播放歌曲名稱放這裡-->
             <div id="player"></div>
+            <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/3kRl7gkXdXM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
             <h2></h2>
             <!-- YouTube Video Player -->
             <br><br><br>
@@ -149,6 +150,8 @@
     <script src="dist/js/bootstrap.min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
     <script src="assets/js/vendor/holder.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
     <script src="yt/playList.js"></script>
     <script src="yt/main.js"></script>
 </body>
