--- a/irene.html
+++ b/irene.html
@@ -12,10 +12,9 @@
 
     <!-- Bootstrap core CSS -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="simpleRPG/style.css" rel="stylesheet">
-
     <!-- Custom styles for this template -->
     <link href="carousel.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -32,13 +31,13 @@
                         <a class="nav-link" href="index.html">Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="irene.html">author</a>
+                        <a class="nav-link active" href="#">author<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link" href="mindquiz.html">mindquiz</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">simpleRPG<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="simpleRPG.html">simpleRPG</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="yt.html">yt</a>
@@ -111,16 +110,69 @@
 
             <hr class="featurette-divider">
 
-            <h1>我要去右下角</h1>
-            <div>
-                <canvas id="myCanvas" width="600" height="600"></canvas>
-                <p id="talkBox"></p>
-            </div>
-            <audio id="bgMusic">
-            </audio>
-            <hr class="featurette-divider">
+            <img class="me" src="img/21.jpg" style="float:right" width=350pX>
 
-            <!-- /END THE FEATURETTES -->
+
+            <h2>自我介紹</h2>
+            <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 我的名字叫<b>黃婉瑜(Irene)</b>，綽號是<b>牛奶</b>、<b>우유</b>，高中讀的是女校，十分有趣和好玩，然而大學我好似也身處在女校，每天也只和女生互動。
+                </br>
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp我是一個典型的<b>天秤座</b>，面對選擇我時常需要煩惱很久才能作出答案，因此在做這個網頁時很難選擇最好的照片，每一張都好想放上來，但又覺得排版會不好看。
+                </br>
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp我當初因為對其他科系不感興趣且數學邏輯方面不錯因此選擇了資工系來就讀，讀完一年感覺雖然經常有課業壓力但總體來說很有趣也很好玩。
+                <h2>網頁簡介</h2>
+                <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp這個網頁是以防彈為主題來延伸的，每個網頁都會有防彈的元素，希望能讓更多人知道防彈。其中首頁的背景音樂是butter，這是防彈的第二首全英文歌曲，曲調很輕快活潑，希望能讓觀看我網頁的人有好心情。
+                    </br>
+                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp而在這頁的背景音樂是dynamite，是防彈第一首全英文歌，也是開創防彈新紀錄的重要功臣。心理測驗的背景音樂是Love myself，意思是在愛人的同時也請愛自己。
+                </p>
+
+
+
+
+                <h2>學歷</h2>
+                <p>國小:<a href="https://www.whps.ntpc.edu.tw/">網溪國民小學</a></br>
+                    國中:<a href="http://www.fhjh.ntpc.edu.tw/default_page.asp">福和國中</a></br>
+                    高中:<a href="https://www.cmgsh.tp.edu.tw/nss/p/index">景美女子高級中學</a></br>
+                    大學:<a href="https://www.yzu.edu.tw/">元智大學</a></p>
+
+
+                <h2>興趣</h2>
+                <ul>
+                    <li>追防彈
+                        <ol type="I">
+                            <li>聽音樂
+                                <img class="me" src="img/22.jpg" style="float:right" width=350px />
+                                <li>看影片
+                        </ol>
+                        <li>休閒
+                            <ol type="I">
+                                <li>玩狗狗
+                                    <li>做餅乾
+                            </ol>
+                </ul>
+
+                <h2>喜歡的美食</h2>
+                <ul>
+                    <li>熟食類
+                        <ol type="I">
+                            <li>媽媽做的大辣咖哩飯
+                                <li>要加酸菜和辣椒的牛肉湯餃
+                                    <li>樂華夜市的麻辣臭豆腐
+                                        <li>章魚小丸子
+                                            <li>媽媽做的餛飩
+                                                <li>學餐的滷味
+                        </ol>
+                        <li>點心飲料類
+                            <ol type="I">
+                                <li>一定要是冰的可樂
+                                    <li>多多綠加珍珠
+                                        <li>原味蛋塔
+                                            <li>自己做的手工餅乾
+                            </ol>
+                </ul>
+
+                <hr class="featurette-divider">
+
+                <!-- /END THE FEATURETTES -->
 
         </div>
         <!-- /.container -->
@@ -130,6 +182,7 @@
         <footer class="container">
             <p class="float-right"><a href="#">Back to top</a></p>
             <p>&copy; 2017-2018 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+            <audio src="dynamite.mp3" controls autoplay loop></audio>
         </footer>
     </main>
 
@@ -144,7 +197,7 @@
     <script src="dist/js/bootstrap.min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
     <script src="assets/js/vendor/holder.min.js"></script>
-    <script src="simpleRPG/main.js"></script>
+
 </body>
 
 </html>
