--- a/index.html
+++ b/index.html
@@ -12,43 +12,46 @@
 
     <!-- Bootstrap core CSS -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="carousel.css" rel="stylesheet">
+
 </head>
 
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="#">Carousel</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        </audio>
+        <nav class=" navbar navbar-expand-md navbar-dark fixed-top bg-dark ">
+            <a class="navbar-brand " href="# ">Carousel</a>
+            <button class="navbar-toggler " type="button " data-toggle="collapse " data-target="#navbarCollapse " aria-controls="navbarCollapse " aria-expanded="false " aria-label="Toggle navigation ">
+          <span class="navbar-toggler-icon "></span>
         </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <div class="collapse navbar-collapse " id="navbarCollapse ">
+                <ul class="navbar-nav mr-auto ">
+                    <li class="nav-item active ">
+                        <a class="nav-link " href="# ">Home <span class="sr-only ">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="mindquiz.html">mindquiz</a>
+                        <a class="nav-link" href="irene.html">author</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="simpleRPG.html">simpleRPG</a>
+                    <li class="nav-item ">
+                        <a class="nav-link " href="mindquiz.html ">mindquiz</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="yt.html">yt</a>
+                    <li class="nav-item ">
+                        <a class="nav-link " href="simpleRPG.html ">simpleRPG</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link " href="yt.html ">yt</a>
                     </li>
                 </ul>
-                <form class="form-inline mt-2 mt-md-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
+
             </div>
         </nav>
     </header>
 
-    <main role="main">
+    <main role="main ">
 
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -68,7 +71,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="second-slide" src="img/03.jpg" alt="Second slide">
+                    <img class="second-slide" src="img/20.jpg" alt="Second slide">
                     <div class="container">
                         <div class="carousel-caption">
                             <h1>防彈少年團</h1>
@@ -103,30 +106,29 @@
       ================================================== -->
         <!-- Wrap the rest of the page in another container to center all the content. -->
 
-        <div class="container marketing">
+        <div class="container marketing ">
 
             <!-- Three columns of text below the carousel -->
-            <div class="row">
-                <div class="col-lg-4">
-                    <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-                    <h2>Heading</h2>
-                    <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <div class="row ">
+                <div class="col-lg-4 ">
+                    <img class="rounded-circle " src="img/07.jpg " alt="Generic placeholder image " width="140 " height="140 ">
+                    <h2>BANGTANTV</h2>
+                    <p>這是防彈的專屬youtube頻道，有許多未看過的舞台、練習和防彈的日常生活，可以更加瞭解防彈</p>
+                    <p><a class="btn btn-secondary " href="https://www.youtube.com/channel/UCLkAepWjdylmXSltofFvsYQ " role="button ">View details &raquo;</a></p>
                 </div>
                 <!-- /.col-lg-4 -->
-                <div class="col-lg-4">
-                    <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-                    <h2>Heading</h2>
-                    <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-                    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <div class="col-lg-4 ">
+                    <img class="rounded-circle " src="img/08.jpg " alt="Generic placeholder image " width="140 " height="140 ">
+                    <h2>방탄소년단</h2>
+                    <p>這是防彈的twitter，他們是七個人共用一支帳號，在這邊防彈會發一些照片或影片來和粉絲互動</p>
+                    <p><a class="btn btn-secondary " href="https://twitter.com/BTS_twt " role="button ">View details &raquo;</a></p>
                 </div>
                 <!-- /.col-lg-4 -->
-                <div class="col-lg-4">
-                    <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-                    <h2>Heading</h2>
-                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
-                        amet risus.</p>
-                    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <div class="col-lg-4 ">
+                    <img class="rounded-circle " src="img/09.jpg " alt="Generic placeholder image " width="140 " height="140 ">
+                    <h2>bts_official_bighit</h2>
+                    <p>這是防彈的tiktok，這邊比較少有更新，但是每一更新都是經典，影片內容都快讓人以為他們是諧星了呢</p>
+                    <p><a class="btn btn-secondary " href="https://www.tiktok.com/@bts_official_bighit? " role="button ">View details &raquo;</a></p>
                 </div>
                 <!-- /.col-lg-4 -->
             </div>
@@ -135,43 +137,43 @@
 
             <!-- START THE FEATURETTES -->
 
-            <hr class="featurette-divider">
+            <hr class="featurette-divider ">
 
-            <div class="row featurette">
-                <div class="col-md-7">
-                    <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-                    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <div class="row featurette ">
+                <div class="col-md-7 ">
+                    <h2 class="featurette-heading ">Awards<span class="text-muted ">獎項</span></h2>
+                    <p class="lead ">獎項過百，其中包含國內數個大型頒獎典禮的大賞，文化勳章等等，國外還有Billboard Music Awards、日本金唱片大獎、iHeartRadio Music Awards等等，是韓國史上獲獎最多的團體</p>
                 </div>
-                <div class="col-md-5">
-                    <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-                </div>
-            </div>
-
-            <hr class="featurette-divider">
-
-            <div class="row featurette">
-                <div class="col-md-7 order-md-2">
-                    <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-                    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-                </div>
-                <div class="col-md-5 order-md-1">
-                    <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+                <div class="col-md-5 ">
+                    <a href="https://www.youtube.com/watch?v=60Ks0ybPuac"><img class="radius" src="img/13.jpg " alt="Generic placeholder image "></a>
                 </div>
             </div>
 
-            <hr class="featurette-divider">
+            <hr class="featurette-divider ">
 
-            <div class="row featurette">
-                <div class="col-md-7">
-                    <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-                    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <div class="row featurette ">
+                <div class="col-md-7 order-md-2 ">
+                    <h2 class="featurette-heading ">Record<span class="text-muted ">大紀錄</span></h2>
+                    <p class="lead ">防彈創下許多韓國的「第一次」，如入圍葛萊美「最佳流行組合」(葛萊美很排外因此要入圍很困難)、「Billboard」歷史上全球最初三個榜單同時空降一位、Youtube史上最短時間觀看破億的男團(不到24小時破億)、首登「Spotify全球前50名」的韓團、首入「百大影響人物」的男團、首獲英美唱片協會認證的男團、首受美國三大脫口秀訪問的男團、韓國「文化勳章」最年輕得主等等</p>
                 </div>
-                <div class="col-md-5">
-                    <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+                <div class="col-md-5 order-md-1 ">
+                    <a href="https://www.youtube.com/watch?v=T4x7sDevVTY"><img class="featurette-image img-fluid mx-auto " src="img/14.jpg " alt="Generic placeholder image "></a>
                 </div>
             </div>
 
-            <hr class="featurette-divider">
+            <hr class="featurette-divider ">
+
+            <div class="row featurette ">
+                <div class="col-md-7 ">
+                    <h2 class="featurette-heading ">milestone<span class="text-muted ">里程碑</span></h2>
+                    <p class="lead ">首度在聯合國演講的男團，2018年在聯合國大會發表長達7分鐘的全英文演說，2020年和歐巴馬、Google的CEO等多位不同領域知名人士，一同舉辦線上虛擬畢業典禮，同時2020年也以青年代表身分赴韓國總統府青瓦台演講等等</p>
+                </div>
+                <div class="col-md-5 ">
+                    <a href="https://www.youtube.com/watch?v=ZhJ-LAQ6e_Y"><img class="radius" src="img/12.jpg " alt="Generic placeholder image "></a>
+                </div>
+            </div>
+
+            <hr class="featurette-divider ">
 
             <!-- /END THE FEATURETTES -->
 
@@ -180,23 +182,24 @@
 
 
         <!-- FOOTER -->
-        <footer class="container">
-            <p class="float-right"><a href="#">Back to top</a></p>
-            <p>&copy; 2017-2018 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <footer class="container ">
+            <p class="float-right "><a href="# ">Back to top</a></p>
+            <p>&copy; 2017-2018 Company, Inc. &middot; <a href="# ">Privacy</a> &middot; <a href="# ">Terms</a></p>
+            <audio src="butter.mp3" controls autoplay loop></audio>
         </footer>
     </main>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
     <script>
-        window.jQuery || document.write('<script src="assets/js/vendor/jquery-slim.min.js"><\/script>')
+        window.jQuery || document.write('<script src="assets/js/vendor/jquery-slim.min.js "><\/script>')
     </script>
-    <script src="assets/js/vendor/popper.min.js"></script>
-    <script src="dist/js/bootstrap.min.js"></script>
+    <script src="assets/js/vendor/popper.min.js "></script>
+    <script src="dist/js/bootstrap.min.js "></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="assets/js/vendor/holder.min.js"></script>
+    <script src="assets/js/vendor/holder.min.js "></script>
 </body>
 
 </html>
