--- a/mindquiz.html
+++ b/mindquiz.html
@@ -32,6 +32,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="irene.html">author</a>
+                    </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="#">mindquiz<span class="sr-only">(current)</span></a>
                     </li>
@@ -43,10 +46,7 @@
                         <a class="nav-link" href="yt.html">yt</a>
                     </li>
                 </ul>
-                <form class="form-inline mt-2 mt-md-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
+
             </div>
         </nav>
     </header>
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="second-slide" src="img/03.jpg" alt="Second slide">
+                    <img class="second-slide" src="img/20.jpg" alt="Second slide">
                     <div class="container">
                         <div class="carousel-caption">
                             <h1>防彈少年團</h1>
@@ -117,9 +117,10 @@
             <div>
                 <h2 id="question"></h2>
                 <div id="options"></div>
-            </div>
-            <input id="startButton" type="button" value="開始作答">
 
+            </div>
+            <input id="startButton" type="button" value="開始作答"><br>
+            <img id="myImage" src="mindquiz/05.jpg" width="400" height="320">
             <hr class="featurette-divider">
 
             <!-- /END THE FEATURETTES -->
@@ -132,6 +133,7 @@
         <footer class="container">
             <p class="float-right"><a href="#">Back to top</a></p>
             <p>&copy; 2017-2018 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+            <audio src="love_yourself.mp3" controls autoplay loop></audio>
         </footer>
     </main>
 
