--- a/yt.html
+++ b/yt.html
@@ -31,6 +31,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="irene.html">author</a>
+                    </li>
                     <li class="nav-item ">
                         <a class="nav-link" href="mindquiz.html">mindquiz</a>
                     </li>
@@ -41,10 +44,7 @@
                         <a class="nav-link active" href="#">yt<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
-                <form class="form-inline mt-2 mt-md-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
+
             </div>
         </nav>
     </header>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="second-slide" src="img/03.jpg" alt="Second slide">
+                    <img class="second-slide" src="img/20.jpg" alt="Second slide">
                     <div class="container">
                         <div class="carousel-caption">
                             <h1>防彈少年團</h1>
