--- a/simpleRPG.html
+++ b/simpleRPG.html
@@ -111,7 +111,8 @@
 
             <hr class="featurette-divider">
 
-            <h1>我要去右下角</h1>
+            <h1>請尋找防彈的專輯</h1>
+            <p>有步數限制，要用錢買專輯，錢一次只能拿一個，星星標誌的箱子可以增加10步，機會只有一次</p>
             <div>
                 <canvas id="myCanvas" width="600" height="600"></canvas>
                 <p id="talkBox"></p>
