--- a/yt.html
+++ b/yt.html
@@ -111,7 +111,7 @@
 
             <hr class="featurette-divider">
 
-            <br><br><br>
+
             <h1>YouTube 心情點唱機</h1>
 
             <!--播放歌曲名稱放這裡-->
@@ -119,10 +119,10 @@
             <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/3kRl7gkXdXM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
             <h2></h2>
             <!-- YouTube Video Player -->
-            <br><br><br>
-            <input id="playButton1" type="button" value="創造營2019/R1SE">
-            <input id="playButton2" type="button" value="創造營2021/INTO1">
-            <input id="playButton3" type="button" value="BTS!">
+            <br>
+            <input id="playButton1" type="button" value="BTS-High歌">
+            <input id="playButton2" type="button" value="BTS-慢歌">
+            <input id="playButton3" type="button" value="BTS-英文歌">
 
             <hr class="featurette-divider">
 
