--- a/4A0B.html
+++ b/4A0B.html
@@ -12,12 +12,13 @@
 
     <!-- Bootstrap core CSS -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="4A0B/style.css" rel="stylesheet">
+
     <!-- Custom styles for this template -->
     <link href="carousel.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
 </head>
 
-<body onLoad="initial()">
+<body>
 
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
@@ -43,7 +44,7 @@
                         <a class="nav-link" href="yt.html">yt</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">ooxx<span class="sr-only">(current)</span></a>
+                        <a class="nav-link active" href="#">4A0B<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
 
@@ -112,41 +113,45 @@
             <!-- START THE FEATURETTES -->
 
             <hr class="featurette-divider">
-</body>
+            <h1>數字猜猜猜</h1>
+            <input id="userInput" type="text" maxlength="4" style="margin-left:450px; margin-top:20px">
+            <button id="Button">Enter</button>
+            <table id="myTable">
 
-<body>
-    <hr class="featurette-divider">
+            </table>
+            <p id="hint">請輸入4位不重複的數</p>
+            <div id="timer"></div>
+            <img id="myImage" src="4A0B/02.gif" width="640" height="320">
+            <audio id="bgMusic">
+            </audio>
+            <hr class="featurette-divider ">
 
-    <!-- /END THE FEATURETTES -->
+            <!-- /END THE FEATURETTES -->
 
-    </div>
-    <!-- /.container -->
+        </div>
+        <!-- /.container -->
 
 
-    <!-- FOOTER -->
-    <footer class="container">
-        <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017-2018 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-        <audio src="dynamite.mp3" controls autoplay loop></audio>
-    </footer>
+        <!-- FOOTER -->
+        <footer class="container ">
+            <p class="float-right "><a href="# ">Back to top</a></p>
+            <p>&copy; 2017-2018 Company, Inc. &middot; <a href="# ">Privacy</a> &middot; <a href="# ">Terms</a></p>
+
+        </footer>
     </main>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
     <script>
-        window.jQuery || document.write('<script src="assets/js/vendor/jquery-slim.min.js"><\/script>')
+        window.jQuery || document.write('<script src="assets/js/vendor/jquery-slim.min.js "><\/script>')
     </script>
-    <script src="assets/js/vendor/popper.min.js"></script>
-    <script src="dist/js/bootstrap.min.js"></script>
+    <script src="assets/js/vendor/popper.min.js "></script>
+    <script src="dist/js/bootstrap.min.js "></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="assets/js/vendor/holder.min.js"></script>
-    <script src="ox/main.js"></script>
-
+    <script src="assets/js/vendor/holder.min.js "></script>
+    <script src="4A0B/main.js "></script>
 </body>
-
-
-
 
 </html>
