--- a/4A0B/index.html
+++ b/4A0B/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 
 <head>
     <meta charset="utf-8">
@@ -8,9 +7,11 @@
 </head>
 
 <body>
-    <div></div>
-    <h1></h1>
-    <p></p>
+    <input id="userInput" type="text">
+    <button>Enter</button>
+    <p id="hint"></p>
+    <div id="timer"></div>
+    <!--倒數 -->
     <script async defer src="main.js"></script>
 </body>
 
