--- a/mindquiz.html
+++ b/mindquiz.html
@@ -45,6 +45,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="yt.html">yt</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="4A0B.html">4A0B</a>
+                    </li>
                 </ul>
 
             </div>
