--- a/index.html
+++ b/index.html
@@ -188,7 +188,9 @@
         <footer class="container ">
             <p class="float-right "><a href="# ">Back to top</a></p>
             <p>&copy; 2017-2018 Company, Inc. &middot; <a href="# ">Privacy</a> &middot; <a href="# ">Terms</a></p>
-            <audio src="butter.mp3" controls autoplay loop></audio>
+            <!-- <audio src="butter.mp3" controls autoplay loop></audio> -->
+            <audio id="bgMusic">
+            </audio>
         </footer>
     </main>
 
@@ -201,7 +203,11 @@
     </script>
     <script src="assets/js/vendor/popper.min.js "></script>
     <script src="dist/js/bootstrap.min.js "></script>
-    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+    <script>
+        var audio = document.getElementById("bgMusic");
+        audio.src = "butter.mp3";
+        audio.play();
+    </script>
     <script src="assets/js/vendor/holder.min.js "></script>
 </body>
 
